--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE>
 <html>
 <head>
-	<title> hello </title>
+	<title> Carlos' page </title>
+        <link rel="stylesheet" type"text/css" href="style.css">
 </head>
 <body>
-	<h1>Hello!</h1>
+  <h1>Hello!</h1>
+    <p>welcome to my webpage<br>as you cant tell it's<br>pretty <em>bare bones</em></p>
+      <ul>
+        <li>dot</li>
+      </ul>
+      <ol>
+        <li>one</li>
+      </ol>
+			
 </body>
 </html>
