i done messed up

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Hello!</h1>
-    <p>welcome to my webpage<br>as you cant tell it's<br>pretty <em>bare bones</em></p>
+    <p>welcome to my webpage<br>as you can tell it's<br>pretty <em>bare bones</em></p>
       <ul>
         <li>dot</li>
       </ul>
