--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html>
 <head>
   	<title> Carlos' page </title>
-        <link rel="stylesheet" type"text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <center><h1>Carlos D. Cruz</h1></center>
