--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
       
   <div class="list">
-    <h3>skills</h3>
+    <em><h3>Skills</h3></em>
     <ul>
         <li>Resourceful</li>
         <li>Bilingual (Spanish and English)</li>
@@ -23,7 +23,7 @@
  
       
       <div class="list">
-        <h3>qualifications</h3>
+        <em><h3>Qualifications</h3></em>
        <ul>
         <li>Flexible</li>
         <li>Easy To Work With</li>
@@ -34,7 +34,7 @@
        </ul>
       </div>
     <div class="list">
-        <h3>Experience</h3>
+        <em><h3>Experience</h3></em>
       <ul>
         <li>Assistant gardener at BEETS (summer of 2015,2016)</li>
         <li>Volunteer at Yosemite (3 days 2016)</li>
@@ -42,12 +42,18 @@
       </ul>
 </div>
     <div class="list">
-      <h3>Education</h3>
+      <em><h3>Education</h3></em>
       <ul>
         <li>High School diploma (SOTA)</li>
         <li>Currently at CCSF</li>
         <li>DevMission Fall 2017</li>
       </ul>
+	</div>
+	<div class="list">
+	 <em><h3>software skills</h3></em>
+	  <ul>
+	   <li>familiar with html, css, Java</li>
+	  </ul>
 	</div>
   </div>
 </body>
