--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  	<title> Carlos' page </title>
+  	<em><title> Carlos' page </title></em>
         <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
