i edited the wrong line

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  	<em><title> Carlos' page </title></em>
+  	<title> Carlos' page </title>
         <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <center><h1>Carlos D. Cruz</h1></center>
+  <em><center><h1>Carlos D. Cruz</h1></center></em>
    <center> <p>Hello my name is Carlos I am currently a student at CCSF<br> I am looking for a job in the tech industry<br> specifically automobiles because i have had a passion for<br> automobiles ever since i was little I<br> even made a mockup car manufacturer  I am a determined<br> and ambitious worker i am easy to work with and im not<br> afraid to reach out i am fluent in spanish and I<br> hope to gain many new skills
 </p> </center>
   
