changed intial paragraph and removed background colors

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <em><center><h1>Carlos D. Cruz</h1></center></em>
-   <center> <p>Hello my name is Carlos I am currently a student at CCSF<br> I am looking for a job in the tech industry<br> specifically automobiles because i have had a passion for<br> automobiles ever since i was little I<br> even made a mockup car manufacturer  I am a determined<br> and ambitious worker i am easy to work with and im not<br> afraid to reach out i am fluent in spanish and I<br> hope to gain many new skills
+   <center> <p>Hello my name is Carlos Cruz I am currently a student at CCSF<br> I am looking for a job in the tech industry<br> specifically automotives because I have had a passion for<br>cars ever since I was little. <br>I hope to develop automated and more advanced on board systems<br> I am a determined and ambitious worker I am easy to work with and im not<br> afraid to reach out, I am fluent in spanish and english and<br> hope to gain many new skills
 </p> </center>
   
   <div class="container">
