--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <em><center><h1>Carlos D. Cruz</h1></center></em>
-   <center> <p>Hello my name is Carlos Cruz I am currently a student at CCSF<br> I am looking for a job in the tech industry<br> specifically automotives because I have had a passion for<br>cars ever since I was little. <br>I hope to develop automated and more advanced on board systems<br> I am a determined and ambitious worker I am easy to work with and im not<br> afraid to reach out, I am fluent in spanish and english and<br> hope to gain many new skills
-</p> </center>
+  <em><center><h1>Carlos D. Cruz</h1></center></em>   
+<center> <div class="intro"><p>Hello my name is Carlos Cruz I am currently a student at CCSF<br> I am looking for a job in the tech industry<br> specifically automotives because I have had a passion for<br>cars ever since I was little. <br>I hope to develop automated and more advanced on board systems<br> I am a determined and ambitious worker I am easy to work with and im not<br> afraid to reach out, I am fluent in spanish and english and<br> hope to gain many new skills.
+</p></div> </center>
   
   <div class="container">
       
